src/test/ui/issues/issue-18423.stderr
error[E0107]: wrong number of lifetime parameters: expected 0, found 1
  --> $DIR/issue-18423.rs:14:8
   |
LL |     x: Box<'a, isize> //~ ERROR wrong number of lifetime parameters
   |        ^^^^^^^^^^^^^^ unexpected lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
